--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "youtube-tv",
     "productName": "YouTube TV",
-    "version": "2.4.2",
+    "version": "2.4.3",
     "description": "Simple YouTube TV client for desktop based on electron.",
     "main": "main.js",
     "scripts": {
@@ -15,9 +15,11 @@
         "buildRetinaDMGBackground": "tiffutil -cathidpicheck background.png background@2x.png -out background.tiff"
     },
     "dependencies": {
+        "@cliqz/adblocker-electron": "^1.26.8",
         "@types/express": "^4.17.13",
         "@types/node": "^18.7.14",
         "@types/peer-dial": "0.0.1",
+        "cross-fetch": "^4.0.0",
         "express": "^4.17.1",
         "hosted-git-info": "^5.1.0",
         "lodash": "^4.17.21",
@@ -28,7 +30,7 @@
         "trim-newlines": "^4.0.2"
     },
     "devDependencies": {
-        "electron": "^28.0.0",
+        "electron": "^20.1.1",
         "electron-builder": "^23.0.2",
         "typescript": "^4.7.3"
     },
@@ -72,5 +74,5 @@
             "icon": "build/icon.ico"
         }
     },
-    "author": "Marcos Rodríguez <marcosylrg@gmail.com>"
+    "author": "Nawras Bukhari <nawrasbukhari@hotmail.com>"
 }
